src/components/atoms/input/input.module.scss
.default {
  display: grid;
  grid-template-rows: 1rem 2.5rem auto;
  gap: 4px;

  .textbox {
    width: 100%;
    border-bottom: 2px solid #e4e6ed;
    font-size: var(--font-size-m);
  }
}

.outline {
  display: grid;
  grid-template-rows: 1.5rem 2.75rem;
  gap: 4px;

  .label {
    font-weight: 600;
    cursor: pointer;
  }

  .textbox {
    width: 100%;
    border: 1px solid var(--color-gray-04);
    transition: border-color 100ms 0s;
    font-size: var(--font-size-m);
    background: #fff;
    border-radius: 8px;
    position: relative;

    &::placeholder {
      color: var(--color-gray-03);
    }
  }
}

.input {
  text-indent: 0.75rem;
  width: 100%;
  height: 100%;

  &::placeholder {
    color: var(--color-gray-02);
  }
}

.eye {
  position: absolute;
  right: 1rem;
  top: 0;
  bottom: 0;
  display: flex;
  justify-content: center;
  align-items: center;
}

.errorItem {
  display: flex;
  align-items: center;
  font-size: var(--font-size-s);
  color: var(--color-error-01);
}

.optionalLabel {
  color: var(--color-gray-02);
  font-weight: 400;
  font-size: var(--font-size-s);
}

.errorsContainer {
  transition: height 300ms 0s;
}

